# houses

./: .env.example  .gitignore  AGENTS.md  Agent Briefing.txt  Makefile  pyproject.toml
.kilo/: kilo.jsonc
data/: CSV_SOURCE.md  bus_fares.json  council_tax_rates.csv  parking_rates.csv  rail_fares.csv
docs/: adding-a-new-enrichment-module.md  api.md  architecture.md  bus-fares.md  coding-standards.md  column-reference.md  commute-breakdown.md  commute.md  council-tax.md  development.md  enrichment-modules.md  epc.md  page-assist-prompt.md  petrol-cost.md  rail-fares.md  schools.md  town-description.md  troubleshooting-endpoints.md  walkability.md  writing-documentation.md
gas/: ViewTab.gs
houses/: __init__.py  __main__.py  api_cache.py  attempt.py  bus_journey.py  car_park.py  commute.py  config.py  context.py  council_tax.py  endpoint_client.py  enricher.py  enrichment_runner.py  epc.py  geo.py  http_error.py  location.py  models.py  property.py  rail_fares.py  retry.py  rightmove_scraper.py  routing.py  schools.py  server.py  services.py  sheet_presentation.py  sheets.py  stamp_duty.py  stations.py  town_desc.py  transit_route.py  walkability.py
scripts/: copy_properties_to_view.py  deploy_script.py  download_rail_fares.py  dump_sheet.py  enrich_schools.py  enrich_with_ofsted.py  enrichment-diff.py  extract_bus_fares.py  extract_council_tax_rates.py  extract_rail_fares.py  migrate_sheet_add_parking_column.py  refresh_columns.py  setup_sheet.py  sheet_tool.py  sync_parking_rates.py  update_sheet.py
tests/: __init__.py  conftest.py  helpers.py  test_enricher.py  test_integration.py  test_models.py  test_server.py  test_sheets.py  (+1 more)
(+85 files in other folders)
