[project]
name = "houses"
version = "0.1.0"
description = "Browser-to-Spreadsheet Ingestion & Enrichment Engine — property listing scraper assistant"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "gspread>=6.2.0",
    "google-auth>=2.38.0",
    "pydantic>=2.13.0",
    "pydantic-settings>=2.8.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.2.0",
    "uk-property-apis",
    "playwright>=1.50.0",
    "money>=1.3.0",
    "setuptools>=82.0.1",
    "pint>=0.25.3",
]

[project.scripts]
houses = "houses.__main__:main"

[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["houses*"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "N"]
ignore = ["UP046", "UP047"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
markers = [
    "integration: tests against a real Google Sheet with mocked httpx transport",
    "e2e: tests that hit real external APIs (skipped unless make test-all)",
]
addopts = ["-m", "not e2e"]
asyncio_mode = "auto"

[tool.uv.sources]
uk-property-apis = { git = "https://github.com/kubilay-yavuz/uk-property-intel.git", subdirectory = "packages/apis" }

[dependency-groups]
dev = [
    "httpx2>=2.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.11.0",
    "coverage>=7.0.0",
    "httpx>=0.28.0",
]
